test/spec_vectors/load/fail/module_50.wat
(module (memory 0) (func $type-address-empty-in-return (return (i32.load)) (drop)))